Revision history for Perl extension CPAN-Inject

0.07 Mon  2 Jul 2007
	- Adding the ability to pull the CPAN config without needing
	  the newest configuration mechanism.

0.06 Sat 16 Mar 2007
	- Added ->remove method
	- Corrected usage notes for ->add
	- Fixed mentions of Module-Inject to CPAN-Inject
	- Added formatting notes for Emacs and Perltidy
	- Updated to Module::Install 0.65

0.05 Wed  3 Jan 2007
	- Config loading does not match CPAN's loading.
	- Changing to use CPAN::HandleConfig->load

0.04 Mon  9 Oct 2006
	- Because I'm an idiot that can't fix bugs properly

0.03 Mon  9 Oct 2006
	- Bug fix

0.02 Mon  9 Oct 2006
	- Adding cpaninject console application

0.01 Sun  8 Oct 2006
	- Created initial version