@@ -1,8 +1,10 @@
 Revision history for Perl extension CPAN-Inject
 
 0.07 Mon  2 Jul 2007
-	- Adding the ability to pull the CPAN config without needing
-	  the newest configuration mechanism.
+	- Adding support for older CPAN configuration loading mechanism.
+	  This should allow CPAN::Inject to work with the default CPAN.pm
+	  that comes with many previous distributions, and as a result
+	  cause far less problems when installing.
 
 0.06 Sat 16 Mar 2007
 	- Added ->remove method
